--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,10 @@
   		<artifactId>junit</artifactId>
   		<version>4.11</version>
   	</dependency>
+      <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>2.19.1</version>
+    </dependency>
   </dependencies>
 </project>
